--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 
 github: [m-primo] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-patreon: primo # Replace with a single Patreon username
-custom: https://click-aduk.blogspot.com/p/support-github.html # Replace with a single custom sponsorship URL
+custom: http://bit.ly/primo-github--support # Replace with a single custom sponsorship URL
