--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,13 @@
     "manifest_version": 2,
     "name": "Your Browsing Homepage",
     "description": "Your gate to the internet.",
-    "version": "2.1.1",
+    "version": "2.2.0",
     "browser_action": {
         "default_icon": "img/icon.png",
-        "default_popup": "startup.html"
+        "default_popup": "startup.html",
+        "icons": "img/icon.png"
     },
-    "content_scripts": [],
-    "permissions": []
+    "icons": {
+        "128": "img/icon.png"
+    }
 }
