--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
 
 github: [m-primo] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-custom: http://bit.ly/primo-github--support # Replace with a single custom sponsorship URL
+ko-fi: mprimo
+custom: ["http://bit.ly/primo-github--support"] # Replace with a single custom sponsorship URL
