--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: [m-primo] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-ko-fi: mprimo
+ko_fi: mprimo
 custom: ["http://bit.ly/primo-github--support"] # Replace with a single custom sponsorship URL
