--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,6 @@
 # These are supported funding model platforms
+# https://docs.github.com/en/github/administering-a-repository/managing-repository-settings/displaying-a-sponsor-button-in-your-repository
 
-github: [m-primo] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+# github: [m-primo] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 ko_fi: mprimo
 custom: ["http://bit.ly/primo-github--support"] # Replace with a single custom sponsorship URL
