multiple updates, check the release changelog (2.3.2)

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,4 +3,6 @@
 
 # github: [m-primo] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 ko_fi: mprimo
+liberapay: primo
+patreon: primo
 custom: ["http://bit.ly/primo-github--support"] # Replace with a single custom sponsorship URL
